3.1-pre5
February 17, 2006
  - Factor out multiple identical definitions of some typedefs into
    xamineDataTypes.h
February 20, 2006
  -  Add longer descriptive titles to the Xamine names (parameter, gates etc).
  -  Fix some quoting errors in gui with respect to spectrum names with spaces.
February 21, 2006
  - Protect evals from parameters that have spaces in them by quoting
    with [list].
  - Add ability to list gates with spectra in SpectrumPackage.cpp's 
    DescribeSpectrum and immediate callers.
  - Add -showgate switch to -list operation on spectrum command.
  - Fix PseudoScript.cpp - did not properly handle cases where pseudo names
    had spaces in them.
February 23, 2006
  - Fix typo in Gui/spectrum.tcl
March 10, 2006
  - Unit tested migration of TCL++ library to object interfaces (remove
    deprecated interfaces).
  - Added Docbook generating stuff to configure.in
March 13, 2006
  - Made operator=, operator== and operator!= of CTCLChannel private as there
    are no implementations.
March 16, 2006
  - Added extensive XML based manpages for the tclPlus CTCL class
    library.
  - Support pre/post command functions for CTCLProcessor.
    this is used in nscldaq to implement the CDAQTCLProcessor.
  - Need to implement CTCLProcssor::Bind to bind itself and the adaptor.
March 20, 2006
  - Added a bit more error checking/reporting to spectrum creation gui.
March 22, 2006
  - Fixed an error in 1-d spectrum creation.. syntax 
March 30, 2006
  - Credit D. Bazin with concept of treeparameter in treeparam C++ sources.
April 17, 2006
  - Fix some 64 bit uncleanliness in Xamine so SpecTcl/Xamine can run
    reliably on 64bit systems in 64bit mode.
April 18, 2006
  - Old method of long titles did not work very well as it made
    old .win files worthless.
April 20, 2006
  - Fix error in sourcing file from GUI.. file should execute at global level.
April 21, 2006
  - Add buffersize selector to event source dialogs.