@@ -435,3 +435,5 @@ April 20, 2006
   - Fix error in sourcing file from GUI.. file should execute at global level.
 April 21, 2006
   - Add buffersize selector to event source dialogs.
+April 23, 2006
+  - Fix typos in  event source dialogs buffersize stuff.
